# smallquery

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh  release.sh  run.sh
src/: core.rs  http_server.rs  lib.rs  main.rs  template.rs  web.rs
src/templates/: base.hbs  error.hbs  found_directory.hbs  found_file.hbs  page.hbs
templates/: found_directory.hbs  found_file.hbs  page.hbs  workspace_query_result.hbs
web/: package.json
web_assets/: package-lock.json  package.json  tailwind.config.js
